--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
-./Com2900G10/Importaciones/resultado.txt
-./Com2900G10/StoredProcedures/resultado.txt
+Com2900G10/Importaciones/resultado.txt
+Com2900G10/StoredProcedures/resultado.txt
